--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"草莓熊",
+    "subTitle":"好好吃饭，好好睡觉，天天向上。",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/214242320?v=4",
     "needComment":0,
     "GMEEK_VERSION":"last"
 }
